<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity">



    <ImageView
        android:id="@+id/confirm_bg_tree"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-12dp"
        android:contentDescription="Logo"
        android:src="@drawable/tree_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/confirm_bg_leaves_1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="-48dp"
        android:contentDescription="Logo"
        android:src="@drawable/leaves_white_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/confirm_bg_leaves_2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="64dp"
        android:contentDescription="Logo"
        android:rotation="210"
        android:src="@drawable/leaves_white_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/confirm_bg_leaves_3"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="-10dp"
        android:contentDescription="Logo"
        android:rotation="210"
        android:src="@drawable/leaves_white_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/confirm_bg_leaves_4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="Logo"
        android:src="@drawable/leaves_white_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm_question"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_image_preview"
        app:layout_constraintEnd_toEndOf="@+id/frame_image_preview"
        app:layout_constraintHorizontal_bias="0.502"
        android:fontFamily="@font/green_tea"
        android:textColor="#379175"
        app:layout_constraintStart_toStartOf="@+id/frame_image_preview" />


    <FrameLayout
        android:id="@+id/frame_image_preview"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:background="@drawable/round_view"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="30dp"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_preview"
            android:contentDescription="@string/confirm_image_preview_description"/>
    </FrameLayout>


    <Button
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/confirm_yes"
        android:backgroundTint="#379175"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/frame_image_preview"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/frame_image_preview"
        app:layout_constraintTop_toBottomOf="@+id/frame_image_preview"
        android:fontFamily="@font/green_tea"
        />

    <Button
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/confirm_no"
        android:textColor="#ffffff"
        android:backgroundTint="#379175"
        app:layout_constraintEnd_toEndOf="@+id/frame_image_preview"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/frame_image_preview"
        app:layout_constraintTop_toBottomOf="@+id/frame_image_preview"
        android:fontFamily="@font/green_tea"/>

</androidx.constraintlayout.widget.ConstraintLayout>